@@ -4,3 +4,4 @@ release-tool.p6
 release-tool.p6
 .precomp
 Changes.mi6-format
+tmp/
