@@ -132,37 +132,7 @@ sub count-substrs(Str:D $ip, Str:D $substr --> UInt) is export(:count-substrs) {
 #|             escaped or included in quotes.
 #|             Also returns the comment if requested.
 #|             All returned text is normalized if requested.
-=begin comment
-multi sub strip-comment(
-    :$text is copy,                #= string of text with possible comment
-    :$save-comment,                #= if true, return the comment (including
-                                   #=   the mark)
-    :mark(:$comment-char) = '#',   #= desired comment char indicator
-    :$normalize,                   #= if true, normalize returned text
-    :$normalize-all,               #= if true, normalize returned comment
-    :$last,                        #= if true, use the last instead of first
-                                   #=   comment char
-    --> List
-) is export(:strip-comment) {
-    my $comment = '';
-    my $idx     = $last ?? rindex $text, $comment-char
-                        !! index  $text, $comment-char;
-    if $idx.defined {
-        $comment = substr $text, $idx; #= we DO want the comment char and following
-	$text    = substr $text, 0, $idx;
-    }
-    if $normalize {
-        $text    = normalize-string $text;
-    }
-    if $normalize-all {
-        $text    = normalize-string $text;
-        $comment = normalize-string $comment;
-    }
-    $text, $comment
-}
-=end comment
-
-multi sub strip-comment(
+sub strip-comment(
     $line is copy,                 #= string of text with possible comment
     :$save-comment,                #= if true, return the comment (including
                                    #=   the mark)
@@ -171,10 +141,24 @@ multi sub strip-comment(
     :$normalize-all,               #= if true, also normalize returned comment
     :$last,                        #= if true, use the last instead of first
                                    #=   comment char
+    :$first,                       #= if true, the comment char must be the
+                                   #=   first non-whitespace character on 
+                                   #=   the line; otherwise, the line is 
+                                   #=   returned as is
 ) is export(:strip-comment) {
     my $comment = '';
-    my $idx     = $last ?? rindex $line, $comment-char
-                        !! index  $line, $comment-char;
+    my $idx;
+
+    if $first.defined {
+        if $line ~~ /^ \h* $comment-char / {
+            $idx = index $line, $comment-char;
+        }
+    }
+    else {
+        $idx = $last ?? rindex $line, $comment-char
+                     !! index  $line, $comment-char;
+    }
+
     if $idx.defined {
         $comment = substr $line, $idx; #= we DO want the comment char and following
 	$line    = substr $line, 0, $idx;
